# p3g

./: .gitignore  README.md  REPORT.md  SYNTAX.md  analyze_cloudsc.py  cloudsc_results.txt  npbench_sdfg_results.txt  pyproject.toml  requirements.txt
p3g/: graph.py  inference.py  p3g.py  parser.py  smt.py  smt_v2.py  subsets.py
pyp3g/: analysis.py  decorator.py  test_decorator.py  test_fft.py  test_transpiler.py  transpiler.py  types.py
sdfg/: converter.py  pcode.py
tests/: test_p3g.py  test_parser.py  test_smt.py  test_smt_v2.py  test_utils.py  utils.py
tests/cases/: case_runner.py  graph_definitions.py  test_array_reversal.py  test_cholesky.py  test_data_aware_bi.py  test_data_aware_bi_b13.py  test_gauss_seidel.py  test_indirect_read_gather.py  test_indirect_write_scatter.py  test_long_distance_dependency.py  test_nested_loop.py  test_non_linear_access.py  test_non_linear_predicate.py  test_parallel_loop.py  test_sequential_loop.py  test_sequential_with_symbolic_max_index.py
tools/: README.md  analyze_all_side_by_side.py  analyze_results.py  array_ssa.py  cloudsc_collect.py  cloudsc_sdfgs.py  convert_sdfg.py  count_nonstandard_loops.py  generate_pcode.py  generate_pcodes.sh  generate_report.py  generate_sdfgs.py  generate_smt.py  npbench_sdfg_collect.py  npbench_sdfgs.py  run_smt_analysis.sh  simplify.py
tools/demo/: adi.pcode  cavity_flow.pcode  cloudsc.f90  cloudsc.pcode  cloudsc.py.txt  cloudsc_stage0.sdfgz  conditional_loop.sdfgz  cooley_tukey_butterfly.pcode  correlation.pcode  data_aware_bi.pcode  deep_loop_branch.pcode  faildemo1.py  ftdt_2d.pcode  (+23 more)
(+1099 files in other folders)
