[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p3g-analyzer"
version = "0.1.0"
description = "P3G to SMT Analyzer."
readme = "README.md"
authors = [{name = "P3G Developer"}]
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "pysmt",
    "dace @ git+https://github.com/spcl/dace.git",
    "questionary",
    "jinja2"
]

[tool.setuptools.packages.find]
include = ["p3g", "tests"]

[tool.pytest.ini_options]
timeout = 30